iter4-user-balance get user balance
