# swagger/gophermart_swagger.yaml
@@ -114,6 +114,22 @@ paths:
         500:
           description: внутренняя ошибка сервера
 
+  /api/user/balance:
+    get:
+      description: Баланс пользователя
+      security:
+        - apiKey: [ ]
+      responses:
+        200:
+          description: успешная обработка запроса
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BalanceResponse'
+        401:
+          description: пользователь не авторизован
+        500:
+          description: внутренняя ошибка сервера
 
 components:
   schemas:
@@ -171,6 +187,18 @@ components:
       type: array
       items:
         $ref: '#/components/schemas/Order'
+
+    BalanceResponse:
+      type: object
+      properties:
+        current:
+          type: number
+          description: текущий баланс пользователя
+          example: 500.5
+        withdrawn:
+          type: number
+          description: сумма использованных баллов
+          example: 200.2
 
     Order:
       type: object
